# oxidd

./: .clang-format  .clang-tidy  .cspell.json  .gitignore  .project-words.txt  CMakeLists.txt  Cargo.toml  LICENSE-MIT  README.md  justfile  oxidd.code-workspace  pyproject.toml  setup.py  xfile
.github/actions/install-cbindgen-linux/: action.yml
.github/workflows/: cpp.yml  pipeline.yml  python.yml  rust.yml  spellcheck.yml
bindings/cpp/: config.h.in
bindings/cpp/doc/: CMakeLists.txt  Doxyfile.in  custom.css  header.html  version-switcher.js
bindings/cpp/docs/: CMakeLists.txt  Doxyfile.in
bindings/cpp/examples/: CMakeLists.txt  capi.c  dump-dot.cpp  export.cpp  import.cpp  visualize.cpp
bindings/cpp/include/: oxidd-bcdd.hpp  oxidd-bdd.hpp  oxidd-cbdd.hpp  oxidd-utils.hpp  oxidd-zbdd.hpp  oxidd.hpp
bindings/cpp/include/oxidd/: bcdd.hpp  bdd.hpp  bridge.hpp  compat.hpp  concepts.hpp  util.hpp  utils.hpp  zbdd.hpp
bindings/cpp/tests/: CMakeLists.txt  boolean-function.cpp
bindings/python/: .gitignore  DEVELOPING.md  README.md  ffi.py
bindings/python/doc/: api.rst  conf.py  getting-started.rst  index.rst
bindings/python/doc/_static/: custom-icons.js  custom.css  matrix-org-icon.js
bindings/python/oxidd/: .gitignore  __init__.py  abc.py  bcdd.py  bdd.py  protocols.py  traits.py  util.py  zbdd.py
bindings/python/oxidd/tests/: test_boolean_function.py
bindings/python/test/: bdd.py
crates/arcslab/: Cargo.toml
crates/arcslab/src/: lib.rs
crates/hugealloc/: Cargo.toml
crates/hugealloc/src/: lib.rs
crates/linear-hashtbl/: Cargo.toml
crates/linear-hashtbl/src/: lib.rs  raw.rs
crates/oxidd/: Cargo.toml
crates/oxidd-cache/: Cargo.toml
crates/oxidd-cache/src/: direct.rs  fifo.rs  lfu.rs  lib.rs  util.rs
crates/oxidd-cli/: Cargo.toml
crates/oxidd-cli/src/: main.rs  profiler.rs  progress.rs  scheduler.rs  util.rs
crates/oxidd-core/: Cargo.toml
crates/oxidd-core/src/: error.rs  function.rs  lib.rs
crates/oxidd-core/src/util/: edge_hash_map.rs  mod.rs  num.rs  on_drop.rs  substitution.rs  var_name_map.rs
crates/oxidd-core/src/util/num/: bigint.rs  mod.rs
crates/oxidd-derive/: Cargo.toml
crates/oxidd-derive/src/: countable.rs  function.rs  lib.rs  manager_event_subscriber.rs  util.rs
crates/oxidd-derive/tests/: countable_tests.rs  index.rs
crates/oxidd-derive/tests/countable/: enum_discriminants.rs  enum_discriminants.stderr  enum_fields.rs  enum_fields.stderr  enum_repr_default.rs  enum_repr_default.stderr  enum_repr_u64.rs  enum_repr_u64.stderr  enum_zero_variants.rs  enum_zero_variants.stderr  struct_fields.rs  struct_fields.stderr  union.rs  union.stderr  valid.rs
crates/oxidd-derive/tests/function/: enum_union.rs  enum_union.stderr  field_count.rs  field_count.stderr  valid.rs
crates/oxidd-dump/: Cargo.toml
crates/oxidd-dump/src/: dddmp.rs  dot.rs  lib.rs  visualize.rs
crates/oxidd-dump/src/dddmp/: export.rs  import.rs  mod.rs
crates/oxidd-dump/src/dot/: dot_impl.rs  mod.rs
crates/oxidd-ffi/: Cargo.toml  cbindgen.toml
crates/oxidd-ffi-c/: Cargo.toml  build.rs  cbindgen.toml  interop.cpp
crates/oxidd-ffi-c/src/: bcdd.rs  bdd.rs  lib.rs  util.rs  zbdd.rs
crates/oxidd-ffi-c/src/util/: dddmp.rs  interop.rs  mod.rs  num.rs
crates/oxidd-ffi-python/: Cargo.toml  build.rs
crates/oxidd-ffi-python/src/: bcdd.rs  bdd.rs  lib.rs  util.rs  zbdd.rs
crates/oxidd-ffi-python/src/util/: dddmp.rs  mod.rs
crates/oxidd-ffi-python/stub_gen/: mod.rs  util.rs
crates/oxidd-ffi/src/: bcdd.rs  bdd.rs  cbdd.rs  lib.rs  util.rs  zbdd.rs
crates/oxidd-manager-index/: Cargo.toml
crates/oxidd-manager-index/src/: lib.rs  manager.rs  workers.rs
crates/oxidd-manager-index/src/node/: fixed_arity.rs  mod.rs
crates/oxidd-manager-index/src/terminal_manager/: dynamic.rs  mod.rs  static.rs
crates/oxidd-manager-index/src/util/: mod.rs  rwlock.rs  var_level_map.rs
crates/oxidd-manager-pointer/: Cargo.toml
crates/oxidd-manager-pointer/src/: lib.rs  manager.rs  workers.rs
crates/oxidd-manager-pointer/src/node/: fixed_arity.rs  mod.rs
crates/oxidd-manager-pointer/src/terminal_manager/: mod.rs  static.rs
crates/oxidd-manager-pointer/src/util/: mod.rs  rwlock.rs
crates/oxidd-parser/: Cargo.toml
crates/oxidd-parser/examples/: load_file.rs
crates/oxidd-parser/src/: aiger.rs  dimacs.rs  lib.rs  load_file.rs  nnf.rs  tv_bitvec.rs  util.rs  vec2d.rs
crates/oxidd-parser/src/vec2d/: mod.rs  with_metadata.rs
crates/oxidd-reorder/: Cargo.toml
crates/oxidd-reorder/src/: lib.rs
crates/oxidd-reorder/src/set_var_order/: mod.rs  segtree.rs
crates/oxidd-rules-bdd/: Cargo.toml
crates/oxidd-rules-bdd/src/: lib.rs  recursor.rs
crates/oxidd-rules-bdd/src/complement_edge/: apply_rec.rs  apply_rec_mt.rs  apply_rec_st.rs  mod.rs
crates/oxidd-rules-bdd/src/simple/: apply_rec.rs  apply_rec_mt.rs  apply_rec_st.rs  mod.rs
crates/oxidd-rules-mtbdd/: Cargo.toml
crates/oxidd-rules-mtbdd/src/: apply_rec.rs  apply_rec_st.rs  lib.rs
crates/oxidd-rules-mtbdd/src/terminal/: f64.rs  i64.rs  int64.rs  mod.rs
crates/oxidd-rules-tdd/: Cargo.toml
crates/oxidd-rules-tdd/src/: apply_rec.rs  apply_rec_st.rs  lib.rs
crates/oxidd-rules-zbdd/: Cargo.toml
crates/oxidd-rules-zbdd/src/: apply_rec.rs  apply_rec_mt.rs  apply_rec_st.rs  lib.rs  recursor.rs
crates/oxidd-test-utils/: Cargo.toml
crates/oxidd-test-utils/src/: edge.rs  lib.rs
crates/oxidd/examples/: bdd_simple.rs  mtbdd.rs  tdd.rs  zbdd.rs
crates/oxidd/src/: bcdd.rs  bdd.rs  cbdd.rs  lib.rs  mtbdd.rs  tdd.rs  zbdd.rs
crates/oxidd/src/util/: apply_cache.rs  mod.rs  num.rs  type_cons.rs
crates/oxidd/tests/: boolean_function.rs  pseudo_boolean_function.rs  reorder.rs
crates/oxidd/tests/boolean_prop/: mod.rs
crates/oxidd/tests/util/: debug.rs  mod.rs  progress.rs
