[project]
name = "oxidd"
version = "0.1.0"
description = "Decision Diagrams"
requires-python = ">=3.8"
keywords = ["Decision Diagrams", "BDD", "ZBDD", "ZDD"]
authors = [{ name = "Nils Husung", email = "husung@cs.uni-saarland.de" }]
maintainers = [{ name = "Nils Husung", email = "husung@cs.uni-saarland.de" }]


dependencies = ["cffi ~= 1.12", "typing-extensions ~= 4.0"]

# see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",

  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",

  "Topic :: Scientific/Engineering",

  "Typing :: Typed",
]

[project.urls]
Homepage = "https://oxidd.net"
Repository = "https://github.com/OxiDD/oxidd"
Issues = "https://github.com/OxiDD/oxidd/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["oxidd"]
package-dir = { "" = "bindings/python" }
