[package]
name = "hugealloc"
version = "0.1.1"
edition = "2021"
description = "Hugepage-aware allocator"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
allocator-api2 = { version = "0.2", default-features = false }

sptr = "0.3"

[target.'cfg(all(any(target_family = "unix", target_family = "windows"), not(miri)))'.dependencies]
# `mmap`, `madvise`
libc = { version = "0.2.153", default-features = false }
