[package]
name = "linear-hashtbl"
version = "0.1.0"
edition = "2021"
description = "Linear probing hash table"
license = "MIT OR Apache-2.0"


[dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = [
  "alloc",
], optional = true }


[features]
default = []

allocator-api2 = ["dep:allocator-api2"]

nightly = ["allocator-api2?/nightly"]
