[package]
name = "oxidd-core"
version = "0.10.0"
edition = "2021"
description = "Core traits and types of the OxiDD decision diagram framework"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
nanorand = { version = "0.8.0", default-features = false, features = ["wyrand"] }
