[package]
name = "oxidd-dump"
version = "0.6.0"
edition = "2021"
description = "Dump OxiDD decision diagrams to file"
readme = "../../README.md"
categories = ["visualization", "encoding"]


authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
oxidd-core.workspace = true
oxidd-derive.workspace = true

# bit sets
fixedbitset = { version = "0.5.7", optional = true }

# fast hash function
#
# Note that there is a performance regression with 2.0, see
# https://github.com/rust-lang/rustc-hash/issues/45
rustc-hash = { version = "1.1", optional = true }

# optimized searching for characters in &[u8]
memchr = { version = "2", optional = true }

# check whether an iterator is sorted
# (TODO: remove this once we raise the MSRV to 1.82)
is_sorted = { version = "0.1", optional = true }

# document feature flags
document-features = "0.2"


[features]
default = ["dddmp", "dot", "visualize"]

## DDDMP format originally from CUDD
dddmp = ["dep:fixedbitset", "dep:rustc-hash", "dep:memchr", "dep:is_sorted"]

## Visualization using Graphviz DOT
dot = []

## Visualization using OxiDD-vis
visualize = ["dddmp"]
